--- a/src/components/pages/landing/Intro/Intro.module.css
+++ b/src/components/pages/landing/Intro/Intro.module.css
@@ -5,6 +5,15 @@
   background-color: white;
   width: 100%;
   border-width: 2px 0px 2px 0px;
-  border-color: black;
+  border-color: rgb(80, 80, 80);
   border-style: solid;
+}
+
+.paper_bg {
+  background-image: url('@assets/img/paper.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
